--- a/my-case.html
+++ b/my-case.html
@@ -99,7 +99,11 @@
       <section id="advertisement">
         <h3>Advertisement</h3>
         <div id="advertisement-box">
-
+          <a href="https://www.timecapsuleny.io/" target="_blank" rel="noopener">
+            <video width="100%" height="100%" autoplay loop>
+              <source src="assets/advertisements/time-capsule-ny.mp4">
+            </video>
+          </a>
         </div>
       </section>
       <section id="friends">
@@ -113,6 +117,7 @@
         </ul>
       </section>
       <section id="Notifications">
+        <h3>Notifications</h3>
         <p><span class="like">👍</span> this person liked your new book addition</p>
         <p><span class="message">✉️</span> this person sent you a message</p>
         <p><span class="mention">🏷️</span> this person mentioned you in a post</p>
