refactor main grid css

--- a/index.html
+++ b/index.html
@@ -93,14 +93,23 @@
         <div class="book"></div>
         <div class="book"></div>
         <div class="book"></div>
+        <div class="book"></div>
+        <div class="book"></div>
+        <div class="book"></div>
       </div>
     </main>
     <aside>
+      <section id="Notifications">
+        <h3>Notifications</h3>
+        <p><span class="like">👍</span> this person liked your new book addition</p>
+        <p><span class="message">✉️</span> this person sent you a message</p>
+        <p><span class="mention">🏷️</span> this person mentioned you in a post</p>
+      </section>
       <section id="advertisement">
         <h3>Advertisement</h3>
         <div id="advertisement-box">
           <a href="https://www.timecapsuleny.io/" target="_blank" rel="noopener">
-            <video width="100%" height="100%" autoplay loop>
+            <video width="100%" height="100%" autoplay loop muted>
               <source src="assets/advertisements/time-capsule-ny.mp4">
             </video>
           </a>
@@ -115,12 +124,6 @@
           <li>Ice S. is reading <span class="book-title">The Story of Edward Munch</span></li>
           <li></li>
         </ul>
-      </section>
-      <section id="Notifications">
-        <h3>Notifications</h3>
-        <p><span class="like">👍</span> this person liked your new book addition</p>
-        <p><span class="message">✉️</span> this person sent you a message</p>
-        <p><span class="mention">🏷️</span> this person mentioned you in a post</p>
       </section>
       <section id="trending">
         <h3>Trending</h3>
