adjust aside content for tablet breakpoint

--- a/index.html
+++ b/index.html
@@ -143,16 +143,6 @@
           </li>
         </ul>
       </section>
-      <section id="advertisement">
-        <h3>Advertisement</h3>
-        <div id="advertisement-box">
-          <a href="https://www.timecapsuleny.io/" target="_blank" rel="noopener">
-            <video width="100%" height="100%" autoplay loop muted>
-              <source src="assets/advertisements/time-capsule-ny.mp4">
-            </video>
-          </a>
-        </div>
-      </section>
       <section id="friends">
         <h3>Friends</h3>
         <ul id="friends-list">
@@ -174,24 +164,34 @@
           </li>
         </ul>
       </section>
+      <section id="advertisement">
+        <h3>Advertisement</h3>
+        <div id="advertisement-box">
+          <a href="https://www.timecapsuleny.io/" target="_blank" rel="noopener">
+            <video width="100%" height="100%" autoplay loop muted>
+              <source src="assets/advertisements/time-capsule-ny.mp4">
+            </video>
+          </a>
+        </div>
+      </section>
       <section id="trending">
         <h3>Trending</h3>
         <ul id="trending-list">
           <li class="trending-list-li">
             <a href="https://www.amazon.com/Ready-Player-One-Ernest-Cline/dp/0307887448" target="_blank" rel="noopener" class="trending-list-li-a">
-              <span><img src="assets/icons/book.png" alt="Book" height="25" width="25"></span>
+              <img class="book-img" src="assets/icons/book.png" alt="Book" height="25" width="25">
               <span class="book-title">Ready Player One</span>
             </a>
           </li>
           <li class="trending-list-li">
             <a href="https://www.amazon.com/Ultimate-Hitchhikers-Guide-Galaxy-Outrageous-ebook/dp/B0043M4ZH0/ref=sr_1_2?keywords=hitchhikers+guide+to+the+galaxy+book&qid=1680727965&s=books&sprefix=hitch%2Cstripbooks%2C100&sr=1-2" target="_blank" rel="noopener" class="trending-list-li-a">
-              <span><img src="assets/icons/book.png" alt="Book" height="25" width="25"></span>
+              <img class="book-img" src="assets/icons/book.png" alt="Book" height="25" width="25">
               <span class="book-title">The Hitchhiker's Guide to the Galaxy</span>
             </a>
           </li>
           <li class="trending-list-li">
             <a href="https://www.amazon.com/Life-Changing-Magic-Tidying-Decluttering-Organizing/dp/1607747308/ref=sr_1_1?crid=3E96IWDYCPHE1&keywords=life+changing+magic+of+tidying+up&qid=1680728011&s=books&sprefix=life+changing+magic+of+tidying+up%2Cstripbooks%2C93&sr=1-1" target="_blank" rel="noopener" class="trending-list-li-a">
-              <span><img src="assets/icons/book.png" alt="Book" height="25" width="25"></span>
+              <img class="book-img" src="assets/icons/book.png" alt="Book" height="25" width="25">
               <span class="book-title">Life Changing Magic of Tidying Up</span>
             </a>
           </li>
