--- a/index.html
+++ b/index.html
@@ -42,18 +42,26 @@
           <div id="controls-top">
             <div id="add-book-container">
                 <label class="accessibility" for="add-book">add new</label>
-                <button id="add-book-button"><span id="add-book-text">+</span></button>
+                <button id="open-dialog-btn"><span id="add-book-text">+</span></button>
                 <dialog id="add-book-modal">
                   <form>
-                    <label for="title">Title</label>
-                    <input type="text" name="title" id="title">
-                    <label for="author">Author</label>
-                    <input type="text" name="author" id="author">
-                    <label for="pages">Pages</label>
-                    <input type="number" name="pages" id="pages">
-                    <label for="read">Read</label>
-                    <input type="checkbox" name="read" id="read">
-                    <button type="submit">Add Book</button>
+                    <div class="input-wrapper">
+                      <label for="title">Title</label>
+                      <input type="text" name="title" id="title">
+                    </div>
+                    <div class="input-wrapper">
+                      <label for="author">Author</label>
+                      <input type="text" name="author" id="author">
+                    </div>
+                    <div class="input-wrapper">
+                      <label for="pages">Pages</label>
+                      <input type="number" name="pages" id="pages">
+                    </div>
+                    <div class="input-wrapper">
+                      <label for="read">Read</label>
+                      <input type="checkbox" name="read" id="read">
+                    </div>
+                    <button type="submit" id="add-book-btn">Add Book</button>
                   </form>
                 </dialog>
               </div>
@@ -82,20 +90,9 @@
       </div>
       <div id="book-case">
         <!-- injected via JS -->
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
-        <div class="book"></div>
+        <article class="book-card"></article>
+        <article class="book-card"></article>
+        <article class="book-card"></article>
       </div>
     </main>
     <aside>
