start footer styles

--- a/index.html
+++ b/index.html
@@ -222,6 +222,21 @@
       </section>
     </aside>
   </div>
-  <footer></footer>
+  <footer>
+    <div id="footer-content-wrapper">
+      <div id="footer-links">
+        <ul>
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+      <div id="footer-logo">
+        <p>Powered By:</p>
+        <a href="https://www.johnkeys.cloud/" target="_blank"><img src="assets/images/logos/cycloneStudios.svg" alt="Cyclone Studios"></a>
+      </div>
+    </div>
+    
+  </footer>
 </body>
 </html>
