finalize footer styles

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <div id="footer-content-wrapper">
       <div id="footer-top-wrapper">
         <section id="subscribe">
-          <h3>Updates</h3>
+          <h3 id="subscribe-links-header">Updates</h3>
           <div id="subscribe-content-wrapper">
             <form id="sign-up-form" action="#">
               <label for="email" class="accessibility">Sign Up</label>
@@ -237,6 +237,7 @@
         </section>
       </div>
       <section id="footer-logo">
+        <p>&copy; 2023 Cyclone Studios™ All Rights Reserved</p>
         <p>Powered By</p>
         <a href="https://www.johnkeys.cloud/" target="_blank"><img src="assets/images/logos/cycloneStudios.svg" alt="Cyclone Studios"></a>
       </section>
