--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <li>
             <a href="#" class="notification-link">
               <span class="love noti-icon">
-                <img src="assets/icons/love.png" width="25" height="25" alt="New Love">
+                <img src="assets/images/icons/love.png" width="25" height="25" alt="New Love">
               </span>
               <span class="notification-text-content">
                 <span class="user-name">
@@ -121,7 +121,7 @@
           <li>
             <a href="#" class="notification-link">
               <span class="message noti-icon">
-                <img src="assets/icons/message.png" height="25" width="25" alt="New Message">
+                <img src="assets/images/icons/message.png" height="25" width="25" alt="New Message">
               </span>
               <span class="notification-text-content">
                 <span class="user-name">
@@ -134,7 +134,7 @@
           <li>
             <a href="#" class="notification-link">
               <span class="mention noti-icon">
-                <img src="assets/icons/mention.png" height="25" width="25" alt="New Mention">
+                <img src="assets/images/icons/mention.png" height="25" width="25" alt="New Mention">
               </span>
               <span class="notification-text-content">
                 <span class="user-name">
@@ -182,19 +182,19 @@
         <ul id="trending-list">
           <li class="trending-list-li">
             <a href="https://www.amazon.com/Ready-Player-One-Ernest-Cline/dp/0307887448" target="_blank" rel="noopener" class="trending-list-li-a">
-              <img class="book-img" src="assets/icons/book.png" alt="Book" height="25" width="25">
+              <img class="book-img" src="assets/images/icons/book.png" alt="Book" height="25" width="25">
               <span class="book-title">Ready Player One</span>
             </a>
           </li>
           <li class="trending-list-li">
             <a href="https://www.amazon.com/Ultimate-Hitchhikers-Guide-Galaxy-Outrageous-ebook/dp/B0043M4ZH0/ref=sr_1_2?keywords=hitchhikers+guide+to+the+galaxy+book&qid=1680727965&s=books&sprefix=hitch%2Cstripbooks%2C100&sr=1-2" target="_blank" rel="noopener" class="trending-list-li-a">
-              <img class="book-img" src="assets/icons/book.png" alt="Book" height="25" width="25">
+              <img class="book-img" src="assets/images/icons/book.png" alt="Book" height="25" width="25">
               <span class="book-title">The Hitchhiker's Guide to the Galaxy</span>
             </a>
           </li>
           <li class="trending-list-li">
             <a href="https://www.amazon.com/Life-Changing-Magic-Tidying-Decluttering-Organizing/dp/1607747308/ref=sr_1_1?crid=3E96IWDYCPHE1&keywords=life+changing+magic+of+tidying+up&qid=1680728011&s=books&sprefix=life+changing+magic+of+tidying+up%2Cstripbooks%2C93&sr=1-1" target="_blank" rel="noopener" class="trending-list-li-a">
-              <img class="book-img" src="assets/icons/book.png" alt="Book" height="25" width="25">
+              <img class="book-img" src="assets/images/icons/book.png" alt="Book" height="25" width="25">
               <span class="book-title">Life Changing Magic of Tidying Up</span>
             </a>
           </li>
