white -> cornsilk all over the place

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
       </div>
       <div id="book-case">
         <!-- injected via JS -->
+        <!-- <article class="book-card"></article>
         <article class="book-card"></article>
-        <article class="book-card"></article>
-        <article class="book-card"></article>
+        <article class="book-card"></article> -->
       </div>
     </main>
     <aside>
