add optional book cover input to add to bookcase form, refactor populateBookCase function, add date logic for later implementation

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                         <input type="checkbox" name="read" id="read" required>
                       </div>
                     </div>
+                    <div id="book-cover-input" class="input-wrapper">
+                      <label class="input-label accessibility" for="book-cover"></label>
+                      <input type="text" name="book-cover" id="book-cover" placeholder="Book Cover URL (Optional)">
+                    </div>
                     <button form="add-book-form" id="add-book-btn">Add Book</button>
                   </form>
                 </dialog>
@@ -96,9 +100,6 @@
       </div>
       <div id="book-case">
         <!-- injected via JS -->
-        <!-- <article class="book-card"></article>
-        <article class="book-card"></article>
-        <article class="book-card"></article> -->
       </div>
     </main>
     <aside>
