--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
         </fieldset>
       </div>
-      <div id="book-case">
+      <div id="bookcase">
         <!-- injected via JS -->
       </div>
     </main>
