adjust add book modal styles

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
                 <label class="accessibility" for="add-book">add new</label>
                 <button id="open-dialog-btn"><span id="add-book-text">+</span></button>
                 <dialog id="add-book-modal">
-                  <h3 id="modal-header">new book</h3>
-                  <button id="modal-close-btn">✖</button>
+                  <div id="top-modal">
+                    <h3 id="modal-header">new book</h3>
+                    <button id="modal-close-btn">✖</button>
+                  </div>
                   <form id="add-book-form">
                     <div id="title-input" class="input-wrapper">
                       <label class="input-label accessibility" for="title">Title</label>
